# runcept

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CI_OPTIMIZATIONS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  REFACTORING_PLAN.md  rmcp-code
.github/: BRANCH_PROTECTION.md  RELEASE_PLEASE_SETUP.md  dependabot.yml  pull_request_template.md
.github/workflows/: actionlint.yml  ci.yml  release-please.yml  release.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  current_implementation_status.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
coverage/: tarpaulin-report.html
docs/: INSTALLATION.md
migrations/: 001_initial_schema.sql  002_add_process_unique_constraint.sql  003_remove_activity_logs.sql
src/: error.rs  ipc.rs  lib.rs  logging.rs  main.rs  mcp_main.rs
src/cli/: client.rs  commands.rs  handler.rs  mod.rs
src/config/: environment.rs  global.rs  mod.rs  project.rs  watcher.rs
src/daemon/: auto_spawn.rs  connection.rs  mod.rs  server.rs
src/daemon/handlers/: daemon.rs  environment.rs  mod.rs  process.rs
src/database/: environment_repository.rs  migrations.rs  mod.rs  operations.rs  process_repository.rs  queries.rs  schema.rs
src/mcp/: server.rs  tools.rs
src/process/: activity_logger_impl.rs  configuration.rs  conversions.rs  execution_service.rs  group_manager.rs  health_check_impl.rs  lifecycle_manager.rs  logging.rs  manager.rs  mod.rs  monitor.rs  monitoring_service.rs  orchestration_service.rs  process.rs  runtime.rs  runtime_impl.rs  state_machine.rs  traits.rs  types.rs
src/scheduler/: health.rs  inactivity.rs  mod.rs
src/test_utils/: builders.rs  fixtures.rs  mocks.rs  mod.rs
test-project/: .runcept.toml
test_env/: .runcept.toml
test_env/test_process_exit/: .runcept.toml
tests/: binary_integration_test.rs  cli_environment_commands.rs  cli_init_commands.rs  cli_process_management.rs  daemon_lifecycle.rs  init_command_test.rs  mcp_integration_test.rs  mcp_protocol_integration.rs  mcp_server.rs  process_exit_detection.rs  process_exit_detection_test.rs  process_group_kill_test.rs  process_group_management.rs  process_health_check_blocking.rs  process_restart_test.rs  process_stop_bug_test.rs  process_termination.rs
tests/common/: assertions.rs  environment.rs  fixtures.rs  mod.rs
