[package]
name = "runcept"
version = "0.1.0"
edition = "2024"
authors = ["mpecan <noreply@example.com>"]
description = "Runcept - A Rust-based process manager that runs and intercepts sync processes with MCP server and CLI interface"
license = "MIT"
repository = "https://github.com/mpecan/runcept"
homepage = "https://github.com/mpecan/runcept"
documentation = "https://github.com/mpecan/runcept#readme"
keywords = ["process-manager", "mcp", "cli", "rust", "sync-processes"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "runcept"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.2.1", features = ["server", "transport-io", "client","transport-child-process", "macros"] }
notify = { version = "6.1", features = ["macos_fsevent"] }
shlex = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
futures = "0.3"
